# gex-options-platform

./: .env.example  .gitignore  LICENSE  Makefile  OPERATIONS.md  README.md  daily_summary.sh  health_check.sh  pyproject.toml  requirements.txt  setup.txt
config/: database_schema.sql  ingestion_config.yaml
deploy/: aws_setup.md  deploy.sh
deploy/steps/: 010.setup  015.data_volume  020.database  021.database_tuning  025.data_volume  030.application  040.tokens  050.security  060.backups  070.systemd  072.gex_cli_tools  080.validation  090.monitoring  095.frontend
deployment/database/: backup-gex-db.sh  restore-gex-db.sh
deployment/run/: ingestion.sh  scheduler.sh
deployment/systemd/: gex-dashboard.service  gex-frontend.service  gex-ingestion.service  gex-monitor.service  gex-scheduler.service
initialize/: get_tradestation_tokens.py
monitoring/: dashboard.html  dashboard.py  monitor.py
scripts/: cache_previous_close.sh  db_maintenance.sh  get_tradestation_tokens.py  monitor_live.sh
src/: __init__.py  bootstrap.py
src/dashboard/: __init__.py  gex_frontend.html  gex_frontend.py
src/frontend/: _navigation.html  about.html  flows_page.html  gamma_page.html  gex_frontend.py  index.html  market_bias_page.html  max_pain_page.html  navigation.js  put_call_page.html  spy_price_page.html
src/gex/: README.md  __init__.py  gex_analyzer.py  gex_calculator.py  gex_cli.py  gex_metrics.py  gex_scheduler.py
tests/: debug_market_hours.py  test_db_write.py  test_env.sh  test_full_pipeline.py  test_greeks_comparison.py  test_ingestion_debug.sh  view_data.sh
(+9 files in other folders)
